Update fmt.Println to print 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -859,6 +859,8 @@ try {
 "सदगीर चेतन समाधान",
 "महाले पवन अर्जुन",
 "मोरे जनार्दन गोकुळ",
+"मुकणे गायत्री किसन",
+"सदगीर कल्याणी तानाजी",
 ],
     };
 
@@ -1212,3 +1214,4 @@ function clearData() {
 </script>
 </body>
 </html>
+
